\name{NEWS}
\title{NEWS file for the \pkg{Uniquorn} bioconductor package }
\section{Changes in version 1.0.5 [2016-05-30]}{
    \subsection{Minor Bugfixes}{
        \itemize{
            \item Fixed errors connected to adding CLs
        }
    }
}
\section{Changes in version 1.0.4 [2016-05-27]}{
    \subsection{Introduction of confidence score}{
        \itemize{
            \item Confidence score is the central threshold now
            \item Default is 3.0
            \item The score is the negative log e of the q-value
        }
    }
}
\section{Changes in version 1.0.3 [2016-05-18]}{
    \subsection{Changes to treshold calculation}{
        \itemize{
            \item Fixed error in threshold calculation
        }
    }
}
\section{Changes in version 1.0.1 [2016-05-09]}{
    \subsection{Minor update of BED files}{
        \itemize{
            \item Extended length of BED file mutations shown in the IGV
        }
    }
}
\section{Changes in version 0.99.16 [2016-05-04]}{
    \subsection{Further minor update of statistics module}{
        \itemize{
            \item Further minor fixes to statistics
        }
    }
}
\section{Changes in version 0.99.15 [2016-05-03]}{
    \subsection{Minor Update of statistics}{
        \itemize{
            \item Minor fixes to statistics
        }
    }
}
\section{Changes in version 0.99.14 [2016-05-03]}{
    \subsection{Major Update of statistics}{
        \itemize{
            \item Replaced the absolute and relative cutoff with a p an q-value based on a binomial distribution
        }
    }
}
\section{Changes in version 0.99.13 [2016-04-08]}{
    \subsection{Fixed unit tests}{
        \itemize{
            \item Further update test suite
        }
    }
}
\section{Changes in version 0.99.12 [2016-04-08]}{
    \subsection{Fixed unit tests}{
        \itemize{
            \item Update testing suite
        }
    }
}
\section{Changes in version 0.99.11 [2016-04-01]}{
    \subsection{Fixed unit tests}{
        \itemize{