@@ -4,7 +4,7 @@
 #' with a reference genome version. Default: GRCH37
 #' @param name_cl Name of the to-be-added cancer cell line sample. '_CUSTOM' 
 #' will automatically be added as suffix.
-#' @param safe_mode Only add mutations to the database where there already are 
+#' @param safe_mode Only add mutations to the database where there already are
 #' mutations found in the cannonical cancer cell lines. This is a safety 
 #' mechanism against overfitting if there are too few custom training samples.
 #' @param test_mode Is this a test? Just for internal use
