@@ -3,7 +3,9 @@
 #' @param candidate_hits_abs_all Maximally possible found variants
 #' @param cl_absolute_mutation_hits Matching variants
 #' @param sim_list Contains reference mutation data
-#' @param minimum_matching_mutations Minimal amount of required matching mutations
+#' @param sim_list_stats Contains global reference mutation stats
+#' @param minimum_matching_mutations Minimal amount of required 
+#' matching mutations
 #' @param list_of_cls List of CLs
 #' @param p_value Required maximal p-value
 #' @param q_value Required maximal q-value
@@ -12,6 +14,7 @@ calculate_p_and_q_values = function(
     candidate_hits_abs_all,
     cl_absolute_mutation_hits,
     sim_list,
+    sim_list_stats,
     minimum_matching_mutations,
     list_of_cls,
     p_value,
@@ -21,9 +24,11 @@ calculate_p_and_q_values = function(
     p_values <<- rep( 1.0, length(list_of_cls))
 
     panels = unique( sapply( list_of_cls, FUN = function( cl_name ){
-        return( 
+        return(
             paste0( "_",
-                utils::tail( unlist( stringr::str_split( cl_name, pattern = "_") ), 1 ) 
+                utils::tail( 
+                    unlist( stringr::str_split( cl_name, pattern = "_") ),
+                1 ) 
             )
         )
     } ) )
@@ -31,24 +36,39 @@ calculate_p_and_q_values = function(
     for ( panel in panels ){
     
         index_panel_sim      = grep( sim_list$CL, pattern = panel )
+        index_panel_sim_stats= grep( sim_list_stats$CL, pattern = panel )
         index_panel_list     = grep( list_of_cls, pattern = panel )
         
         var_per_panel        = length( sim_list$Fingerprint[ index_panel_sim ] )
         muts_per_cl          = cl_absolute_mutation_hits[ index_panel_list ]
         white_balls_possible = var_per_panel - muts_per_cl
+        
+        if ( ( panel == "_CUSTOM") && 
+             ( length( p_values_panel ) == 1 ) && 
+             ( white_balls_possible == 0 ) 
+        )
+            
+            message("There is only one CL in the customt set. 
+                  A confidence scoere calculation is only 
+                  possible with more than one sample!")
+            
         white_balls_found    = candidate_hits_abs_all[ index_panel_list ]
         black_balls          = var_per_panel - white_balls_possible
-        likelihood           = cl_absolute_mutation_hits[ index_panel_list ] / var_per_panel
-
+        
+        likelihood           = 1 / sim_list_stats$Count[index_panel_sim_stats]
+        
         q                    = white_balls_found - 1
         q[ q < 0 ]           = 0
 
         p_values_panel       = as.double( stats::pbinom( 
-            q = q, 
-            size = sum( white_balls_found ), 
-            p = likelihood, 
+            q = q,
+            size = sum( white_balls_found ),
+            p = likelihood,
             lower.tail = FALSE 
         ) )
+        
+        p_values_panel[ white_balls_found == 0 ] = 1.0
+
         p_values_panel[ white_balls_found < minimum_matching_mutations ] = 1.0
 
         p_values[ index_panel_list ] = p_values_panel
